@@ -1,9 +1,11 @@
 package com.workhub.cs.service.csPost;
 
-import com.workhub.cs.dto.csPost.CsPostFileRequest;
 import com.workhub.cs.dto.csPost.CsPostRequest;
 import com.workhub.cs.dto.csPost.CsPostResponse;
 import com.workhub.cs.entity.CsPost;
+import com.workhub.cs.port.AuthorLookupPort;
+import com.workhub.cs.port.dto.AuthorProfile;
+import com.workhub.file.dto.FileUploadResponse;
 import com.workhub.file.service.FileService;
 import com.workhub.global.error.ErrorCode;
 import com.workhub.global.error.exception.BusinessException;
@@ -17,13 +19,16 @@ import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
+import org.springframework.mock.web.MockMultipartFile;
+import org.springframework.web.multipart.MultipartFile;
 
-import java.util.Arrays;
 import java.util.List;
+import java.util.Optional;
 
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.assertj.core.api.Assertions.assertThatThrownBy;
 import static org.mockito.ArgumentMatchers.any;
+import static org.mockito.ArgumentMatchers.anyLong;
 import static org.mockito.ArgumentMatchers.argThat;
 import static org.mockito.Mockito.*;
 
@@ -42,6 +47,9 @@ class CreateCsPostServiceTest {
     @Mock
     private FileService fileService;
 
+    @Mock
+    private AuthorLookupPort authorLookupPort;
+
     @InjectMocks
     private CreateCsPostService createCsPostService;
 
@@ -56,6 +64,9 @@ class CreateCsPostServiceTest {
                 .title("문의 제목")
                 .content("문의 내용")
                 .build();
+
+        lenient().when(authorLookupPort.findByUserId(anyLong()))
+                .thenReturn(Optional.of(new AuthorProfile(mockSaved.getUserId(), "작성자")));
     }
 
     @Test
@@ -85,21 +96,28 @@ class CreateCsPostServiceTest {
         Long projectId = 1L;
         Long userId = 2L;
 
-        List<CsPostFileRequest> fileRequests = Arrays.asList(
-                new CsPostFileRequest("file1", 1),
-                new CsPostFileRequest("file2", 2)
+        List<MultipartFile> multipartFiles = List.of(
+                new MockMultipartFile("files", "file1.png", "image/png", "data1".getBytes()),
+                new MockMultipartFile("files", "file2.png", "image/png", "data2".getBytes())
         );
 
-        CsPostRequest request = new CsPostRequest("문의 제목", "내용", fileRequests);
+        List<FileUploadResponse> uploadResponses = List.of(
+                FileUploadResponse.from("file1.png", "https://example.com/file1"),
+                FileUploadResponse.from("file2.png", "https://example.com/file2")
+        );
+
+        CsPostRequest request = new CsPostRequest("문의 제목", "내용", null);
 
         when(projectService.validateCompletedProject(projectId)).thenReturn(Project.builder().projectId(projectId).projectTitle("p").status(Status.COMPLETED).build());
         when(csPostService.save(any(CsPost.class))).thenReturn(mockSaved);
+        when(fileService.uploadFiles(multipartFiles)).thenReturn(uploadResponses);
         when(csPostService.saveAllFiles(anyList())).thenAnswer(invocation -> invocation.getArgument(0));
 
-        createCsPostService.create(projectId, userId, request, null);
+        createCsPostService.create(projectId, userId, request, multipartFiles);
 
         verify(projectService).validateCompletedProject(projectId);
         verify(csPostService).save(any(CsPost.class));
+        verify(fileService).uploadFiles(multipartFiles);
         verify(csPostService, times(1)).saveAllFiles(anyList());
     }
 
